--- a/style.css
+++ b/style.css
@@ -750,4 +750,111 @@ footer a i{
 }
 
 
- 
+/* break points ......................,..............*/
+
+@media(max-width:991px){
+    header,
+    header.sticky{
+        padding:15px 5%
+    }
+
+    footer{
+        padding: 15px 5%;
+    }
+
+    section{
+        padding: 50px 5%;
+    }
+    .navlist a{
+        padding: 8px,15px;
+    }
+    :root{
+        --big-font:2.2rem;
+        --normal-font:1.8rem;
+        --neon-box-shadow:0 0 .8rem #12f7ff;
+        --h2-font:3rem;
+    }
+    .home-content{
+        margin-top: 2rem;
+    }
+
+    .social-icons{
+        margin-top: 2rem;
+    }
+    .word span{
+        font: 10px;
+    }
+   
+} 
+
+@media(max-width:768px){
+    #menu-icon{
+        display:block;
+        transition: all .4s  ease;
+    }
+
+    #menu-icon.bx-x{
+        transform: rotate(-180deg);
+       
+
+    }
+
+    .navlist{
+        display: flex;
+        position: absolute;
+        top: -1000px;
+        right: 0;
+        left: 0;
+        flex-direction: column;
+        background: var(--bg-color);
+        text-align: left;
+        padding: 0 5%;
+        transition: all .45s ease;
+    }
+    .navlist a{
+        display: block;
+        padding-bottom: 1rem;
+        font-size: 1rem;
+    }
+    .navlist.open{
+    top: 100%;
+    }
+   
+    .home{
+        grid-template-columns: 1fr;
+    }
+    .home-image{
+        margin-bottom: 5rem;
+    }
+    .about{
+        flex-direction: column-reverse;
+    }
+    .skill-main{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media(max-width:420px){
+    html{
+        font-size: 80%;
+    }
+    footer p{
+    font-size: .6rem;
+}
+.img-about img{
+    width: 300px;
+}
+.img-about{
+    font-size: 1rem;
+}
+
+}
+  
+    
+
+@media(max-width:1125px){
+    .change-text h3 .word{
+        position: relative;
+    }
+    
+}    
